fixed spacings, added youtube presentation

--- a/zc-portfolio/src/components/OttertunityPage/OttertunityPage.css
+++ b/zc-portfolio/src/components/OttertunityPage/OttertunityPage.css
@@ -1,12 +1,12 @@
+/* Hide scrollbar for Chrome, Safari and Opera */
+.App::-webkit-scrollbar {
+    display: none;
+  }
+  
+/* Hide scrollbar for IE, Edge, and Firefox */
 .App {
-    text-align: center;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
-    overflow-y: auto;
-}
-
-.App::-webkit-scrollbar {
-    display: none !important;
 }
 
 .CenteredImage {
